compiler/acton/test/typeerrors/actor_self_reserved_variable.act
actor Test():
    var self = 42